feat: implement delete dailyLog by id
